# MagicSearchEngine

./: .gitignore  AUTHORS  ChangeLog  LICENSE  NEWS  README.md  configure.ac  main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
src/: Makefile.am  card.cpp  card.hpp  database.cpp  database.hpp  main.cpp  searching.cpp  searching.hpp  ui.cpp  ui.hpp
